[혜원] 시작화면 크레딧샵으로
/credit-shop라우트 제거완. 로그인 가능

--- a/my_proj_t_test/.gitignore
+++ b/my_proj_t_test/.gitignore
@@ -42,6 +42,7 @@ build/
 src/main/docs/public/firebase-config.js
 src/main/resources/*.json
 *key.pem
+src/main/java/com/hwang/Studies/Jami_API.java
 .crt
 .csr
 .key
