[혜원]api폴더랑 public폴더 옮겨서 다시 시도

--- a/my_proj_t_test/.gitignore
+++ b/my_proj_t_test/.gitignore
@@ -39,13 +39,12 @@ build/
 
 .env
 
-src/main/docs/public/firebase-config.js
+api/firebase-config.js
 src/main/resources/*.json
 *key.pem
-src/main/java/com/hwang/Studies/Jami_API.java
+src/main/java/com/hwang/Studies/*.java
 .crt
 .csr
 .key
 server.key
 .vercel
-
