[혜원]vercel.json수정

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
       "dest": "/api/index.js"
     },
     {
+      "src": "/firebase-config",
+      "dest": "/api/index.js"
+    },
+    {
       "src": "/verify-token",
       "dest": "/api/index.js"
     },
