--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.11.1",
+    "@grpc/grpc-js": "^1.10.9",
+    "@grpc/proto-loader": "^0.7.13",
     "axios": "^1.10.0",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
@@ -18,7 +20,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase-admin": "^11.11.1",
-    "google-auth-library": "^9.14.1"
+    "google-auth-library": "^9.14.1",
+    "google-gax": "^4.3.7",
+    "protobufjs": "^7.2.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
