--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
-
 {
   "version": 2,
   "routes": [
@@ -35,6 +34,14 @@
       "dest": "/api/index.js"
     },
     {
+      "src": "/store-payment-data",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/get-payment-data/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
       "src": "/iamport-webhook",
       "dest": "/api/index.js"
     },
@@ -65,7 +72,13 @@
   ],
   "functions": {
     "api/index.js": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "runtime": "nodejs18.x"
+    }
+  },
+  "build": {
+    "env": {
+      "NEXT_RUNTIME": "nodejs"
     }
   }
 }
