--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "eroom-credit-shop",
   "version": "1.0.0",
@@ -8,25 +7,26 @@
     "start": "node api/index.js",
     "dev": "nodemon api/index.js",
     "build": "echo 'Build complete'",
-    "test": "node api/index.js"
+    "test": "node api/index.js",
+    "vercel-build": "echo 'Vercel build complete'"
   },
   "dependencies": {
-    "firebase-admin": "^12.1.0",
-    "@google-cloud/firestore": "^7.1.0",
-    "@grpc/grpc-js": "^1.9.0",
-    "@grpc/proto-loader": "^0.7.8",
-    "google-auth-library": "^9.6.3",
-    "axios": "^1.10.0",
-    "body-parser": "^2.2.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "firebase-admin": "12.1.0",
+    "@google-cloud/firestore": "7.1.0",
+    "@grpc/grpc-js": "1.9.0",
+    "@grpc/proto-loader": "0.7.8",
+    "google-auth-library": "9.6.3",
+    "axios": "1.10.0",
+    "body-parser": "2.2.0",
+    "cookie-parser": "1.4.7",
+    "cors": "2.8.5",
+    "dotenv": "16.5.0",
+    "express": "5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.0"
+    "nodemon": "3.0.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.x"
   }
 }
