--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
+
 {
   "version": 2,
   "routes": [
@@ -72,13 +73,7 @@
   ],
   "functions": {
     "api/index.js": {
-      "maxDuration": 30,
-      "runtime": "nodejs18.x"
-    }
-  },
-  "build": {
-    "env": {
-      "NEXT_RUNTIME": "nodejs"
+      "maxDuration": 30
     }
   }
 }
