--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "16.5.0",
     "express": "5.1.0",
     "firebase-admin": "^12.1.0",
+    "gcp-metadata": "^7.0.0",
     "google-auth-library": "9.6.3",
     "google-gax": "^5.0.0"
   },
