[혜원] \\다시 수정

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ERoom Credit Shop Server for Vercel",
   "main": "api/index.js",
   "scripts": {
-    "vercel-build": "node -e \"require('@google-cloud/firestore')\" && npm run build",
+    "vercel-build": "node -e \"require('@google-cloud/firestore')\"",
     "start": "node api/index.js",
     "dev": "nodemon api/index.js",
     "build": "echo 'Build complete'",
