--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "eroom-credit-shop",
   "version": "1.0.0",
   "description": "ERoom Credit Shop Server for Vercel",
-  "main": "api/index.js",
+  "main": "api/server.js",
   "scripts": {
-    "start": "node api/index.js",
-    "dev": "nodemon api/index.js",
+    "start": "node api/server.js",
+    "dev": "nodemon api/server.js",
     "build": "echo 'Build complete'",
-    "test": "node api/index.js"
+    "test": "node api/server.js"
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.11.1",
