--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
   "version": 2,
-  "buildCommand": "npm install && npm run build",
   "builds": [
     {
       "src": "api/server.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": "node_modules/@google-cloud/**"
+      }
     }
   ],
-  "installCommand": "npm install --legacy-peer-deps",
+  "installCommand": "npm ci --production=false",
   "routes": [
     {
       "src": "/api/(.*)",
