--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "nodemon": "^3.0.0"
   },
   "engines": {
-    "node": "18.0.0"
+    "node": "18.x"
   },
   "overrides": {
     "@google-cloud/firestore": "^7.11.1"
