--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "test": "node api/server.js"
   },
   "dependencies": {
-    "@google-cloud/firestore": "^7.11.1",
+    "firebase-admin": "^12.1.0",
+    "@google-cloud/firestore": "^6.8.0",
     "google-auth-library": "^9.14.1",
     "axios": "^1.10.0",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "firebase-admin": "^11.11.1"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
@@ -27,6 +27,6 @@
     "node": "22.x"
   },
   "overrides": {
-    "@google-cloud/firestore": "^7.11.1"
+    "@google-cloud/firestore": "^6.8.0"
   }
 }
