--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       "use": "@vercel/node"
     }
   ],
-  "installCommand": "npm install --legacy-peer-deps",
+  "installCommand": "npm install --legacy-peer-deps --force",
   "routes": [
     {
       "src": "/api/(.*)",
