--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.11.1",
-    "google-auth-library": "^9.14.1",
     "axios": "^1.10.0",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "firebase-admin": "^12.1.0"
+    "express-session": "^1.18.1",
+    "firebase-admin": "^12.1.0",
+    "google-auth-library": "^9.14.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
